--- a/style.css
+++ b/style.css
@@ -9,3 +9,76 @@ html, body {
 body {
     font-family: verdana, arial, helvetica, sans-serif;
 }
+
+.nav{
+    text-align: center;
+    background: color #FFD700;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border: 1px;
+    border-color: #e7e7e7;
+}
+.nav li{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 40px;
+    padding-right: 20px;
+}
+
+li{
+    display: inline;
+}
+.nav a{
+    text-decoration: none;
+   color:black; 
+}
+
+.main div{;
+    width: 900px;
+    height: 900px;
+    margin: 0 auto 0 auto;
+
+}
+.footer{
+    background-color: #FFD700;
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    text-align: center;
+}
+
+.footer img{
+    width: 50px;
+}
+
+,footer li{
+    display: inline;
+}
+
+.cv img{
+    display: block;
+    float:left;
+    width: 60px;
+    height: 60px;
+    padding-right: 10px;
+}
+
+.cv ul{
+    padding left: 0;
+}
+
+.cv li{
+    list-style-type:none;
+    text-align: justify;
+    border-bottom: 1px solid #FFD700;
+}
+
+.me{
+    text-align: justify
+}
+
+.me img{
+    float:left 
+}
